// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Separator createMediaCollection() should separate files to collections 1`] = `
Object {
  "albumCollection": Object {
    "YXJ0aXN0L2FsYnVt": Object {
      "artistName": "artist",
      "artistUrl": "baseurl/artist/YXJ0aXN0",
      "coverUrl": "baseurl/file/YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
      "files": Array [
        Object {
          "fileUrl": "baseurl/file/YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
          "id": "YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
          "name": "song.mp3",
          "url": "baseurl/audio/YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
        },
      ],
      "images": Array [
        Object {
          "fileUrl": "baseurl/file/YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
          "id": "YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
          "name": "cover.JPG",
          "url": "baseurl/image/YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
        },
      ],
      "name": "album",
    },
  },
  "artistCollection": Object {
    "YXJ0aXN0": Object {
      "albums": Array [
        Object {
          "coverUrl": "baseurl/file/YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
          "firstAlbumAudio": Object {
            "id": "YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
            "name": "song.mp3",
          },
          "id": "YXJ0aXN0L2FsYnVt",
          "name": "album",
          "url": "baseurl/album/YXJ0aXN0L2FsYnVt",
        },
      ],
      "files": Array [
        Object {
          "fileUrl": "baseurl/file/YXJ0aXN0L3NvbmcubXAz",
          "id": "YXJ0aXN0L3NvbmcubXAz",
          "name": "song.mp3",
          "url": "baseurl/audio/YXJ0aXN0L3NvbmcubXAz",
        },
      ],
      "images": Array [
        Object {
          "fileUrl": "baseurl/file/YXJ0aXN0L2ltYWdlLlBORw",
          "id": "YXJ0aXN0L2ltYWdlLlBORw",
          "name": "image.PNG",
          "url": "baseurl/image/YXJ0aXN0L2ltYWdlLlBORw",
        },
      ],
      "name": "artist",
      "url": "baseurl/artist/YXJ0aXN0",
    },
  },
  "artistObject": Object {
    "a": Array [
      Object {
        "id": "YXJ0aXN0",
        "name": "artist",
        "url": "baseurl/artist/YXJ0aXN0",
      },
    ],
  },
  "audioCollection": Object {
    "YXJ0aXN0L2FsYnVtL3NvbmcubXAz": Object {
      "albumId": "YXJ0aXN0L2FsYnVt",
      "albumName": "album",
      "albumUrl": "baseurl/album/YXJ0aXN0L2FsYnVt",
      "artistName": "artist",
      "artistUrl": "baseurl/artist/YXJ0aXN0",
      "id": "YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
      "name": "song.mp3",
      "url": "baseurl/file/YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
    },
    "YXJ0aXN0L3NvbmcubXAz": Object {
      "artistName": "artist",
      "artistUrl": "baseurl/artist/YXJ0aXN0",
      "fileUrl": "baseurl/file/YXJ0aXN0L3NvbmcubXAz",
      "id": "YXJ0aXN0L3NvbmcubXAz",
      "name": "song.mp3",
      "url": "baseurl/file/YXJ0aXN0L3NvbmcubXAz",
    },
  },
  "imageCollection": Object {
    "YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw": Object {
      "albumId": "YXJ0aXN0L2FsYnVt",
      "albumName": "album",
      "albumUrl": "baseurl/album/YXJ0aXN0L2FsYnVt",
      "artistName": "artist",
      "artistUrl": "baseurl/artist/YXJ0aXN0",
      "id": "YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
      "name": "cover.JPG",
      "url": "baseurl/file/YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
    },
    "YXJ0aXN0L2ltYWdlLlBORw": Object {
      "artistName": "artist",
      "artistUrl": "baseurl/artist/YXJ0aXN0",
      "fileUrl": "baseurl/file/YXJ0aXN0L2ltYWdlLlBORw",
      "id": "YXJ0aXN0L2ltYWdlLlBORw",
      "name": "image.PNG",
      "url": "baseurl/file/YXJ0aXN0L2ltYWdlLlBORw",
    },
  },
}
`;

exports[`Media Separator createMediaCollection() should separate files to collections for Electron 1`] = `
Object {
  "albumCollection": Object {
    "YXJ0aXN0L2FsYnVt": Object {
      "artistName": "artist",
      "artistUrl": "",
      "coverUrl": "file:/baseurl/artist/album/cover.JPG",
      "files": Array [
        Object {
          "fileUrl": "file:/baseurl/artist/album/song.mp3",
          "id": "YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
          "name": "song.mp3",
          "url": "",
        },
      ],
      "images": Array [
        Object {
          "fileUrl": "file:/baseurl/artist/album/cover.JPG",
          "id": "YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
          "name": "cover.JPG",
          "url": "",
        },
      ],
      "name": "album",
    },
  },
  "artistCollection": Object {
    "YXJ0aXN0": Object {
      "albums": Array [
        Object {
          "coverUrl": "file:/baseurl/artist/album/cover.JPG",
          "firstAlbumAudio": Object {
            "id": "YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
            "name": "song.mp3",
          },
          "id": "YXJ0aXN0L2FsYnVt",
          "name": "album",
          "url": "",
        },
      ],
      "files": Array [
        Object {
          "fileUrl": "file:/baseurl/artist/song.mp3",
          "id": "YXJ0aXN0L3NvbmcubXAz",
          "name": "song.mp3",
          "url": "",
        },
      ],
      "images": Array [
        Object {
          "fileUrl": "file:/baseurl/artist/image.PNG",
          "id": "YXJ0aXN0L2ltYWdlLlBORw",
          "name": "image.PNG",
          "url": "",
        },
      ],
      "name": "artist",
      "url": "",
    },
  },
  "artistObject": Object {
    "a": Array [
      Object {
        "id": "YXJ0aXN0",
        "name": "artist",
        "url": "",
      },
    ],
  },
  "audioCollection": Object {
    "YXJ0aXN0L2FsYnVtL3NvbmcubXAz": Object {
      "albumId": "YXJ0aXN0L2FsYnVt",
      "albumName": "album",
      "albumUrl": "",
      "artistName": "artist",
      "artistUrl": "",
      "id": "YXJ0aXN0L2FsYnVtL3NvbmcubXAz",
      "name": "song.mp3",
      "url": "file:/baseurl/artist/album/song.mp3",
    },
    "YXJ0aXN0L3NvbmcubXAz": Object {
      "artistName": "artist",
      "artistUrl": "",
      "fileUrl": "file:/baseurl/artist/song.mp3",
      "id": "YXJ0aXN0L3NvbmcubXAz",
      "name": "song.mp3",
      "url": "file:/baseurl/artist/song.mp3",
    },
  },
  "imageCollection": Object {
    "YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw": Object {
      "albumId": "YXJ0aXN0L2FsYnVt",
      "albumName": "album",
      "albumUrl": "",
      "artistName": "artist",
      "artistUrl": "",
      "id": "YXJ0aXN0L2FsYnVtL2NvdmVyLkpQRw",
      "name": "cover.JPG",
      "url": "file:/baseurl/artist/album/cover.JPG",
    },
    "YXJ0aXN0L2ltYWdlLlBORw": Object {
      "artistName": "artist",
      "artistUrl": "",
      "fileUrl": "file:/baseurl/artist/image.PNG",
      "id": "YXJ0aXN0L2ltYWdlLlBORw",
      "name": "image.PNG",
      "url": "file:/baseurl/artist/image.PNG",
    },
  },
}
`;
